# Campus_Sentinal_Dual_Way_channel

./: .gitignore
cctv_interaction_system/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
cctv_interaction_system/config/: __init__.py  cameras.yaml  prometheus.yml  settings.py
cctv_interaction_system/deploy/docker/: api.Dockerfile  base.Dockerfile  gpu.Dockerfile
cctv_interaction_system/docs/: ARCHITECTURE.md
cctv_interaction_system/grafana/: dashboard.json  dashboards.yaml
cctv_interaction_system/scripts/: check_models.py  check_real_models.py  debug_pair_analyzer.py  debug_pair_probs.py  export_models.py  init_db.py  process_video.py  run_demo_video.py  run_pipeline.py  simulate_cameras.py  test_fight_samples.py  test_imports.py  test_interaction_flow.py
cctv_interaction_system/src/: __init__.py
cctv_interaction_system/src/common/: __init__.py  db_client.py  logger.py  metrics.py  redis_client.py  schemas.py
cctv_interaction_system/src/layer0_ingestion/: __init__.py  ffmpeg_pipeline.py  frame_router.py  ingestion_worker.py
cctv_interaction_system/src/layer1_detection/: __init__.py  batch_collector.py  detector.py  postprocess.py
cctv_interaction_system/tests/: conftest.py  test_alert_dedup.py  test_alerts.py  test_api.py  test_batch_collector.py  test_bytetrack.py  test_cascade.py  test_detector.py  test_ema.py  test_individual.py  test_ingestion.py  test_kalman.py  test_pair_analysis.py  test_pipeline_e2e.py  test_skeleton_buffer.py  test_state_machine.py  test_track_manager.py
(+31 files in other folders)
