[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cctv_interaction_recognition"
version = "1.0.0"
description = "Production-grade CCTV interaction recognition pipeline"
requires-python = ">=3.10"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.setuptools.packages.find]
include = ["src*", "config*"]
